--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nestjs/common": "^7.0.0",
     "@nestjs/core": "^7.0.0",
     "@nestjs/platform-express": "^7.0.0",
+    "@nestjs/swagger": "^4.7.7",
     "@nestjs/typeorm": "^7.1.5",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
@@ -31,6 +32,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.5.4",
+    "swagger-ui-express": "^4.1.5",
     "typeorm": "^0.2.29"
   },
   "devDependencies": {
